--- a/src/index.css
+++ b/src/index.css
@@ -15,14 +15,27 @@ body {
   position: relative;
 }
 
+.react-autosuggest__container::after {
+  width: 10px;
+  height: 10px;
+  background: url('https://imgak.mmtcdn.com/pwa_v3/pwa_commons_assets/desktop/spriteModifySearch.png') no-repeat;
+  background-size: 50px 50px;
+  background-position: -20px -5px;
+  content: '';
+  position: absolute;
+  left: 10px;
+  top: 15px;
+}
+
 .react-autosuggest__input {
-  width: 240px;
+  width: 100%;
   height: 30px;
-  padding: 10px 20px;
+  padding: 5px 0px 0px 30px;
+  box-shadow: 0 2px 3px 0 rgb(0 0 0 / 10%);
   font-family: Helvetica, sans-serif;
   font-weight: 300;
   font-size: 16px;
-  border: 1px solid #aaa;
+  border: 1px solid #fff;
   border-radius: 4px;
 }
 
@@ -40,18 +53,9 @@ body {
 }
 
 .react-autosuggest__suggestions-container--open {
+  max-height: 270px;
+  overflow-y: auto;
   display: block;
-  position: absolute;
-  top: 51px;
-  width: 280px;
-  border: 1px solid #aaa;
-  background-color: #fff;
-  font-family: Helvetica, sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  z-index: 2;
 }
 
 .react-autosuggest__suggestions-list {
