--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,80 @@ body {
   color: #4a4a4a;
   font-size: 14px;
 }
+
+
+.react-autosuggest__container {
+  position: relative;
+}
+
+.react-autosuggest__container::after {
+  width: 10px;
+  height: 10px;
+  background: url('https://imgak.mmtcdn.com/pwa_v3/pwa_commons_assets/desktop/spriteModifySearch.png') no-repeat;
+  background-size: 50px 50px;
+  background-position: -20px -5px;
+  content: '';
+  position: absolute;
+  left: 10px;
+  top: 15px;
+}
+
+.react-autosuggest__input {
+  width: 100%;
+  height: 30px;
+  padding: 5px 0px 0px 30px;
+  box-shadow: 0 2px 3px 0 rgb(0 0 0 / 10%);
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+}
+
+.react-autosuggest__input--focused {
+  outline: none;
+}
+
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+
+.react-autosuggest__suggestions-container--open {
+  max-height: 270px;
+  overflow-y: auto;
+  display: block;
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
+}
+
+.react-autosuggest__section-container {
+  border-top: 1px dashed #ccc;
+}
+
+.react-autosuggest__section-container--first {
+  border-top: 0;
+}
+
+.react-autosuggest__section-title {
+  padding: 10px 0 0 10px;
+  font-size: 12px;
+  color: #777;
+}
